base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dso-demo-java
  namespace: dso-demo-java
  labels:
    app: dso-demo-java
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dso-demo-java
  template:
    metadata:
      labels:
        app: dso-demo-java
    spec:
      imagePullSecrets:
        - name: quay-image-pull-secret
      containers:
        - name: dso-demo-java
          image: quay.apps.ocp4-8.infocepo.com/ministere-interieur-demo-projets-dso-clients/app-java-forge-dso-demo:912efb0
          imagePullPolicy: Always
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080  # Exposes container port
