base/postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: dso-demo-java
  name: postgres # Sets service name
  labels:
    app: postgres # Labels and Selectors
spec:
  type: ClusterIP # Sets service type
  ports:
    - port: 5432 # Sets port to run the postgres application
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: livre-blanc-transverse-recette
  name: postgres-lb-recette  # Sets Deployment name
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:14.5 # Sets Image
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432  # Exposes container port
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
      restartPolicy: Always
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgresql-data-claim
